--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.Form_Aluno_Activity"/>
+        <activity android:name=".ui.activity.FormAlunoActivity"/>
 
-        <activity android:name=".ui.activity.Lista_Alunos_Activity">
+        <activity android:name=".ui.activity.ListaAlunosActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
